# data_project_aws

./: .gitignore  hello.py  pyproject.toml
.github/workflows/: ci.yml
src/lambdas/: hello_lambda.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: test_lambda.py  test_main.py
