[project]
name = "data-project-aws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.4",
    "requests (>=2.32.3,<3.0.0)",
    "boto3 (>=1.37.7,<2.0.0)",
]

[tool.poetry]
name = "data-project-aws"
version = "0.1.0"
description = "Just a test project"
authors = ["Your Name <saku.arho@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

